<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/adapter_id"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:elevation="3dp">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/recycler_descricao_id"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="5"
				android:text="@string/descricao"
				android:textColor="@android:color/black"
				android:textSize="16sp" />

			<TextView
				android:id="@+id/recycler_valor_id"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="end"
				android:text="@string/valor"
				android:textSize="16sp"
				android:textStyle="bold" />

		</LinearLayout>

		<TextView
			android:id="@+id/recycler_categoria_id"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/categoria"
			android:textSize="14sp" />

	</LinearLayout>
</androidx.cardview.widget.CardView>